Changed into Half Dark

--- a/src/app/components/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,64 +1,1 @@
-<div class="admin-dashboard-main">
-    <div class="jumbotron jumbotron-fluid">
-        <div class="row px-md-5 px-1">
-            <div class="col-md-7">
-                <form [formGroup]="animeForm" (ngSubmit)="addAnime()">
-                    <div class="row form-group">
-                        <label for="" class="col-md-3 col-form-label pl-0">Name of the Anime: </label>
-                        <input type="text" name="" id="name" placeholder="Anime Name" class="col-md-9 form-control"
-                            formControlName="name" [ngClass]="{ 'is-invalid': submitted && form.name.errors }">
-                        <div *ngIf="submitted && form.name.errors" class="invalid-feedback row text-center">
-                            <div *ngIf="form.name.errors.required" class="col-md-12">Anime Name is required</div>
-                        </div>
-                    </div>
-                    <div class="row form-group">
-                        <label for="" class="col-md-3 col-form-label pl-0">Source of the Anime: </label>
-                        <input type="text" name="" id="" placeholder="Anime Source" class="col-md-9 form-control"
-                            formControlName="source">
-                    </div>
-                    <div class="row form-group">
-                        <label for="" class="col-md-3 col-form-label pl-0">Anime Description : </label>
-                        <textarea placeholder="Anime Description" class="col-md-9 form-control"
-                            formControlName="description"></textarea>
-                    </div>
-                    <div class="row form-group">
-                        <label for="" class="col-md-3 col-form-label pl-0">Anime Air Start Year : </label>
-                        <input type="text" name="" id="" placeholder="Anime Air Start Year"
-                            class="col-md-9 form-control" formControlName="airStartDate">
-                    </div>
-                    <div class="row form-group">
-                        <label for="" class="col-md-3 col-form-label pl-0">Anime Air End Year : </label>
-                        <input type="text" name="" id="" placeholder="Anime Air End Year" class="col-md-9 form-control"
-                            formControlName="airEndDate">
-                    </div>
-                    <div class="row form-group">
-                        <label for="" class="col-md-3 col-form-label pl-0">Image Location : </label>
-                        <input type="text" (input)="changeFile($event)" class="form-control col-md-9" placeholder="Image Hosted Path"
-                            formControlName="image" [ngClass]="{ 'is-invalid': submitted && form.image.errors }"/>
-                        <div *ngIf="submitted && form.image.errors" class="invalid-feedback row text-center">
-                            <div *ngIf="form.image.errors.required" class="col-md-12">Image Path is required</div>
-                        </div>
-                    </div>
-                    <div class="col-md-12 form-group text-center pt-3">
-                        <button class="btn btn-outline-dark">Save Anime</button>
-                    </div>
-                    <div class="col-md-12 form-group text-center">
-                        <span [ngClass]="success ? 'text-success' : 'text-danger'">
-                            {{ message }}
-                        </span>
-                    </div>
-                </form>
-            </div>
-            <div class="col-md-5">
-                <div *ngIf="imgPath != null">
-                    <img [src]="imgPath" alt="" class="img-fluid">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row text-center py-4">
-        <div class="col-md-12">
-            <button class="btn btn-danger" (click)="logout()">Logout</button>
-        </div>
-    </div>
-</div>
+<p>Admin Dashboard</p>
